# pappapai-ecosystem

./: Cargo.toml  README.md  config.toml
docker/: Dockerfile
scripts/: deploy.sh  index.html
src/: Cargo.toml  Config.toml  bus.rs  chain.rs  consensus.rs  ethics.rs  geo_ethics.rs  knowledge_chain.rs  main.rs  p2p.rs  sharding.rs  snn_core.rs  storage.rs  token.rs  trusted_rag.rs  voice.rs  wallet.rs
src/api/: handlers.rs
systemd/: pappap.service
