[package]
name = "pappap-ai-chain"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.19"
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "kad"] }
rocksdb = "0.22"
bip39 = "2.0"
ed25519-dalek = "2.0"
rand = "0.8"
chrono = "0.4"
once_cell = "1.19"
whisper-rs = "0.10"
vits-rs = "0.2"  # giả lập, sau thay bằng thật
tracing = "0.1"
tracing-subscriber = "0.3"